test: path 지정 첫번째 테스트 src/**

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   push:
     branches: [ "feature/*", "fix/*", "refactor/*" ]
+    paths:
+      - "src/**"
 
 permissions:
   contents: read
