--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "feature/*", "fix/*", "refactor/*" ]
     paths:
-      - "src/**"
+      - "/core/core-api/src/**"
 
 permissions:
   contents: read
