test: path 지정 네번째 테스트 core 모듈 앞 ../ 제거

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "feature/*", "fix/*", "refactor/*" ]
     paths:
-      - "../core/core-api/src/**"
+      - "core/core-api/src/**"
 
 permissions:
   contents: read
